Addressing some PR feedback